--- a/package.json
+++ b/package.json
@@ -12,15 +12,17 @@
     "test": "NODE_PATH=server/lib mocha server/test --recursive --reporter spec"
   },
   "dependencies": {
-    "dotenv-with-overload": "^0.5.1",
-    "body-parser": "^1.15.2",
+    "ajv": "^4.11.5",
     "app-module-path": "^2.1.0",
+    "body-parser": "^1.15.2",
+    "cors": "^2.7.1",
+    "dotenv-with-overload": "^0.5.1",
     "express": "^4.13.4",
+    "firebase": "^3.7.3",
+    "firebase-encode": "0.0.5",
     "forwarded-for": "^0.1.1",
     "jsonschema": "^1.1.0",
-    "jwt-simple": "^0.5.0",
-    "cors": "^2.7.1",
-    "firebase": "^3.7.3"
+    "jwt-simple": "^0.5.0"
   },
   "devDependencies": {
     "chai": "^3.5.0",
