--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "test": "NODE_PATH=server/lib mocha server/test --recursive --reporter spec"
   },
   "dependencies": {
+    "aguid": "^2.0.0",
     "ajv": "^4.11.5",
     "app-module-path": "^2.1.0",
     "body-parser": "^1.15.2",
