--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "firebase-encode": "0.0.5",
     "forwarded-for": "^0.1.1",
     "jsonschema": "^1.1.0",
-    "jwt-simple": "^0.5.0"
+    "jwt-simple": "^0.5.0",
+    "nodemailer": "^3.1.8"
   },
   "devDependencies": {
     "chai": "^3.5.0",
